; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211.c_ieee80211_media2rate.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211.c_ieee80211_media2rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ieee80211_media2rate.ieeerates = internal constant [26 x i32] [i32 -1, i32 0, i32 0, i32 2, i32 4, i32 2, i32 4, i32 11, i32 22, i32 44, i32 12, i32 18, i32 24, i32 36, i32 48, i32 72, i32 96, i32 108, i32 144, i32 0, i32 0, i32 6, i32 9, i32 54, i32 -1, i32 -1], align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ieee80211_media2rate(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @IFM_SUBTYPE(i32 %3)
  %5 = call i64 @nitems(i32* getelementptr inbounds ([26 x i32], [26 x i32]* @ieee80211_media2rate.ieeerates, i64 0, i64 0))
  %6 = icmp ult i64 %4, %5
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = call i64 @IFM_SUBTYPE(i32 %8)
  %10 = getelementptr inbounds [26 x i32], [26 x i32]* @ieee80211_media2rate.ieeerates, i64 0, i64 %9
  %11 = load i32, i32* %10, align 4
  br label %13

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %12, %7
  %14 = phi i32 [ %11, %7 ], [ 0, %12 ]
  ret i32 %14
}

declare dso_local i64 @IFM_SUBTYPE(i32) #1

declare dso_local i64 @nitems(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
